update control flow

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: baka3k's Coding Guildline
+title: Android Coding Guildline
 email: baka3k@gmail.com
 description: baka3k
 theme: just-the-docs
-color_scheme: dark
+# color_scheme: dark
 
 url: https://baka3k.github.io
 github_username: baka3k
