--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,20 @@ back_to_top_text: "Back to top"
 
 #ga_tracking: G-NTC0J1J3N2
 
+compress_html:
+  ignore:
+    envs: all
+
 kramdown:
+  input: GFM
+  syntax_highlighter: rouge
   syntax_highlighter_opts:
-    block:
+    default_lang: text
+    span:
+      default_lang: text
       line_numbers: false
+    block:
+      default_lang: text
+      line_numbers: true
+      start_line: 1
+
